--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 <ol>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="Arduino.html">Arduino</a></li>
-					<li><a href="Python.html">Python</a></li>
+                    <li><a href="Python.html">Python</a></li>
+                    <li><a href="CS2A.html"></a></li>
 					<li><a href="http://www.ict-kanazawa.ac.jp" target="_blank">About ICT</a></li>
                     <li><a href="#">Other</a></li>
                 </ol>
