--- a/CS2A.html
+++ b/CS2A.html
@@ -12,6 +12,6 @@
         <li><a href="STEM.html">STEM file</a></li>
         <h3>Also I made some video </h3>
         <li><a href="13-CharacterSript-ShunsukeKatsumata_HTML5 Canvas.html">final worksheet</a></li>
-        <li><a href="" > ED project video</a></li>
+        <li><a href="CS.html" > ED project video</a></li>
     </body>
 </html>
