--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <li><a href="Arduino.html">Arduino</a></li>
                     <li><a href="Python.html">Python</a></li>
                     <li><a href="CS2A.html">CS2A</a></li>
+                    <li><a href="EDhistry"> EDhistry</a></li>
 					<li><a href="http://www.ict-kanazawa.ac.jp" target="_blank">About ICT</a></li>
                     <li><a href="#">Other</a></li>
                 </ol>
