--- a/Arduino.html
+++ b/Arduino.html
@@ -14,7 +14,8 @@
                 <ol>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="Arudino.html">Arduino</a></li>
-					<li><a href="Python.html">Python</a></li>
+                    <li><a href="Python.html">Python</a></li>
+                    <li><a href="EDhistroy"> EDhistry</a></li>
 					<li><a href="http://www.ict-kanazawa.ac.jp" target="_blank">About ICT</a></li>
                     
                 </ol>
