--- a/Python.html
+++ b/Python.html
@@ -13,9 +13,10 @@
             <h2>Projects from Shunsuke's programed.</h2>
             <nav id="sitenav">
                 <ol>
-                    <li><a href="Shunsuke.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Arduino.html" >Arduino</a></li>
-					<li><a href="Python.html" >Python</a></li>
+                    <li><a href="Python.html" >Python</a></li>
+                    <li><a href="EDhistroy"> EDhistry</a></li>
 					<li><a href="http://www.ict-kanazawa.ac.jp" target="_blank">About ICT</a></li>
                     <li><a href="#">Other</a></li>
                 </ol>
