--- a/EDhistroy.html
+++ b/EDhistroy.html
@@ -21,6 +21,7 @@
                 </ol>
             </nav>
         </header>
+        <div id = "main">
         <h2>waht did i do in ED2B<h2>
             <article>
                 <h3>first prodct</h3>
@@ -38,6 +39,7 @@
                     <p></p>
                     <a href = "ED2B_map_pp.pptx"></a>
             </article>
+        </div>
     </body>
 
 </html>
