--- a/EDhistroy.html
+++ b/EDhistroy.html
@@ -13,7 +13,7 @@
             <h2>Projects from Shunsuke's programed.</h2>
             <nav id="sitenav">
                 <ol>
-                    <li><a href="Shunsuke.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Arduino.html" >Arduino</a></li>
 					<li><a href="Python.html" >Python</a></li>
 					<li><a href="http://www.ict-kanazawa.ac.jp" target="_blank">About ICT</a></li>
