--- a/Python.html
+++ b/Python.html
@@ -13,7 +13,7 @@
             <h2>Projects from Shunsuke's programed.</h2>
             <nav id="sitenav">
                 <ol>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="anal.html">Home</a></li>
                     <li><a href="Arduino.html" >Arduino</a></li>
                     <li><a href="Python.html" >Python</a></li>
                     <li><a href="EDhistroy"> EDhistry</a></li>
