--- a/Python.html
+++ b/Python.html
@@ -15,6 +15,7 @@
                 <ol>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="Arduino.html" >Arduino</a></li>
+                    <!--<li><a href="Arduino.html" >Arduino</a></li>-->
                     <li><a href="Python.html" >Python</a></li>
                     <li><a href="EDhistroy"> EDhistry</a></li>
 					<li><a href="http://www.ict-kanazawa.ac.jp" target="_blank">About ICT</a></li>
