--- a/EDhistroy.html
+++ b/EDhistroy.html
@@ -34,10 +34,10 @@
                 
                 <h3>therd product</h3>
                     <p>we got idea that we have to more Ad about Shiramine so we made web site and we make Ad material</p>
-                    <a href = "ED2B_statu_pp.pdf"></a>
+                    <a href = "ED2B_statu_pp.pdf">pdf</a>
                 <h3>Last product</h3>
                     <p></p>
-                    <a href = "ED2B_map_pp.pdf"></a>
+                    <a href = "ED2B_map_pp.pdf">pdf</a>
             </article>
         </div>
     </body>
