--- a/EDhistroy.html
+++ b/EDhistroy.html
@@ -22,22 +22,22 @@
             </nav>
         </header>
         <div id = "main">
-        <h2>waht did i do in ED2B<h2>
+        <h2>what did I do in ED2B<h2>
             <article>
-                <h3>first prodct</h3>
+                <h3>first product</h3>
                     <p>
-                        We made hakoiri Musme. this is toy, that tell the history of gezannbutu to user.
+                        We made hakoiri Musme. this is toy, that tell the history of Gezannbutu to user.
                     </p>
-
+                    <a href = "ED2B_hakoiri_pp.pdf">first product's pp</a>
                 <h3>Second product</h3>
-                    <p>we thought one day charenge event, that is the event that shiramine people make sure there are good thinges. </p>
-                
-                <h3>therd product</h3>
+                    <p>we thought one day charenge event, that is the event that Shiramine people make sure there are good thinges. </p>
+                    <a href = ""></a>
+                <h3>third product</h3>
                     <p>we got idea that we have to more Ad about Shiramine so we made web site and we make Ad material</p>
-                    <a href = "ED2B_statu_pp.pdf">pdf</a>
+                    <a href = "ED2B_statu_pp.pdf">third product's pp</a>
                 <h3>Last product</h3>
-                    <p></p>
-                    <a href = "ED2B_map_pp.pdf">pdf</a>
+                    <p>I hope it is last product.</p>
+                    <a href = "ED2B_map_pp.pdf">last product's pp</a>
             </article>
         </div>
     </body>
